update classify.py, notebooks, add log visualization script

--- a/Task2/bow.ipynb
+++ b/Task2/bow.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pip in /home/georg/projects/.venv/lib/python3.10/site-packages (23.3.2)\n"
+     ]
+    }
+   ],
    "source": [
     "from utils.long_residuals_mlp import *\n",
     "from utils.utils import *\n",
@@ -22,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,12 +125,30 @@
     "\n",
     "model.load_weights(MODEL_WEIGHTS)\n",
     "\n",
-    "model_layer = Model(inputs=model.input, outputs=model.get_layer('dense_5').output)\n"
+    "model_layer = Model(inputs=model.input, outputs=model.get_layer('dense_5').output)\n",
+    "\n",
+    "for subdir1 in os.listdir(images_directory):\n",
+    "    for subdir2 in os.listdir(os.path.join(images_directory, subdir1)):\n",
+    "        for file in os.listdir(os.path.join(images_directory, subdir1, subdir2)):\n",
+    "            img = load_and_preprocess_image(image_path=os.path.join(images_directory, subdir1, subdir2, file),\n",
+    "                                            target_size=(256, 256,3))\n",
+    "            \n",
+    "\n",
+    "            patches = split_image_into_patches(img, PATCH_SIZE)\n",
+    "            print(patches.shape)\n",
+    "            patch_embeddings = []\n",
+    "            for patch in patches:\n",
+    "                layer_output = model_layer.predict(patch)\n",
+    "                patch_embeddings.append(layer_output)\n",
+    "            layer_output = np.array(patch_embeddings).squeeze(axis=1)\n",
+    "            print(layer_output.shape)\n",
+    "            # save np array to csv file\n",
+    "            np.savetxt(os.path.join('/home/gherodes/projects/tf_test/project23-24-04/Task2/embeddings/32', file.split('.')[0]+'.csv'), layer_output, delimiter=',')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -178,21 +204,17 @@
       "/home/georg/projects/.venv/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:1934: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=3)\n"
      ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'/home/georg/projects/university/C3_ML_for_CV/MIT_split/train/mountain/nat1046.jpg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m codebook\u001b[38;5;241m.\u001b[39mfit(training_embeddings)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# create visual words for training data\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m train_visual_words \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_visual_words\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtraining_files\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membeddings_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcodebook\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# create visual words for test data\u001b[39;00m\n\u001b[1;32m     12\u001b[0m test_visual_words \u001b[38;5;241m=\u001b[39m create_visual_words(test_files, embeddings_dict, codebook)\n",
-      "File \u001b[0;32m~/projects/university/C3_ML_for_CV/project23-24-04/Task2/utils/utils.py:115\u001b[0m, in \u001b[0;36mcreate_visual_words\u001b[0;34m(image_paths, descriptors_dictionary, codebook)\u001b[0m\n\u001b[1;32m    113\u001b[0m visual_words \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m image_path \u001b[38;5;129;01min\u001b[39;00m image_paths:\n\u001b[0;32m--> 115\u001b[0m     descriptor \u001b[38;5;241m=\u001b[39m \u001b[43mdescriptors_dictionary\u001b[49m\u001b[43m[\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    116\u001b[0m     labels \u001b[38;5;241m=\u001b[39m codebook\u001b[38;5;241m.\u001b[39mpredict(descriptor)\n\u001b[1;32m    117\u001b[0m     visual_words[image_path] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mbincount(labels, minlength\u001b[38;5;241m=\u001b[39mcodebook\u001b[38;5;241m.\u001b[39mn_clusters)\n",
-      "\u001b[0;31mKeyError\u001b[0m: '/home/georg/projects/university/C3_ML_for_CV/MIT_split/train/mountain/nat1046.jpg'"
-     ]
     }
    ],
    "source": [
+    "def create_visual_words(image_paths, descriptors_dictionary, codebook):\n",
+    "    visual_words = {}\n",
+    "    for image_path in image_paths:\n",
+    "        descriptor = descriptors_dictionary[os.path.basename(image_path)]\n",
+    "        labels = codebook.predict(descriptor)\n",
+    "        visual_words[image_path] = np.bincount(labels, minlength=codebook.n_clusters)\n",
+    "    return np.array(list(visual_words.values()))\n",
+    "\n",
     "codebook = MiniBatchKMeans(n_clusters=N_CLUSTERS,\n",
     "                           verbose=False, \n",
     "                           batch_size=2150,\n",
@@ -209,9 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting knn with n_neighbors=5, metric=euclidean, weights=distance\n",
+      "(0.5055762081784386, 0.5259822822889195, 0.538203993940126, 0.5093570721672362)\n"
+     ]
+    }
+   ],
    "source": [
     "# fit kNN classifier\n",
     "print(f'Fitting knn with n_neighbors={N_NEIGHBORS}, metric={METRIC}, weights={WEIGHT}')\n",
