clean up SVM.ipynb

--- a/Task2/svm.ipynb
+++ b/Task2/svm.ipynb
@@ -106,37 +106,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NotADirectoryError",
-     "evalue": "[Errno 20] Not a directory: './MIT_split/train/.DS_Store'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m embeddings_dict \u001b[38;5;241m=\u001b[39m read_embeddings(directory\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./image\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m training_files, training_labels \u001b[38;5;241m=\u001b[39m \u001b[43mload_data_from_directory\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m./MIT_split/train\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m test_files, test_labels \u001b[38;5;241m=\u001b[39m load_data_from_directory(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./MIT_split/test\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m training_embeddings \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([embeddings_dict[os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mbasename(file)] \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m training_files])\n",
-      "File \u001b[0;32m~/Desktop/Master_ComputerVIsion_UAB/C3/Task 2/utils/utils.py:98\u001b[0m, in \u001b[0;36mload_data_from_directory\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     96\u001b[0m labels \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m class_directory \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(path):\n\u001b[0;32m---> 98\u001b[0m     image_file_names \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclass_directory\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     99\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m image_file_name \u001b[38;5;129;01min\u001b[39;00m image_file_names:\n\u001b[1;32m    100\u001b[0m         image_paths\u001b[38;5;241m.\u001b[39mappend(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path, class_directory, image_file_name))\n",
-      "\u001b[0;31mNotADirectoryError\u001b[0m: [Errno 20] Not a directory: './MIT_split/train/.DS_Store'"
-     ]
-    }
-   ],
-   "source": [
-    "embeddings_dict = read_embeddings(directory='./image')\n",
-    "\n",
-    "training_files, training_labels = load_data_from_directory('./MIT_split/train')\n",
-    "test_files, test_labels = load_data_from_directory('./MIT_split/test')\n",
-    "\n",
-    "training_embeddings = np.array([embeddings_dict[os.path.basename(file)] for file in training_files])\n",
-    "test_embeddings = np.array([embeddings_dict[os.path.basename(file)] for file in test_files])\n",
-    "\n",
-    "print(training_embeddings.shape)\n",
-    "print(test_embeddings.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -2987,36 +2956,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting svm with C=0.001, kernel=linear, gamma=scale\n",
-      "(0.4250309789343247, 0.41030224034343876, 0.4946766485828986, 0.3904486249117256)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/georg/projects/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'svm_kernel': 'rbf', 'svm_C': 1, 'svm_gamma': 0.05}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'Fitting svm with C={SVM_C}, kernel={SVM_KERNEL}, gamma={SVM_GAMMA}')\n",
-    "svm = SVC(C=SVM_C, kernel=SVM_KERNEL, gamma=SVM_GAMMA)\n",
-    "svm.fit(training_embeddings, training_labels)\n",
-    "# predict labels for test data\n",
-    "pred_labels = svm.predict(test_embeddings)\n",
-    "\n",
-    "# get accuracy metric for current run\n",
-    "print(get_metrics(test_labels, pred_labels))"
+    "study.best_params"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
